# bob

./: .gitignore  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: letter-for-santa.md
environment-setup/: README.md
environment-setup/instructor/: README.md  default_inventory_issue.md
labs/: README.md
labs/agentic/: README.md
labs/agentic/agent-simulator/: README.md
labs/agentic/control-plane/: README.md
labs/agentic/controls/: README.md
labs/agentic/data-poisoning/: README.md
labs/agentic/debugging/: README.md
labs/agentic/guardrails/: README.md  plugins.py
labs/agentic/instructor-guide/: DEPLOY_MANUAL.md  README.md  apikey.md
labs/agentic/instructor-guide/hyperscalers/azure/azure_car_agent/: .dockerignore  .env.example  Dockerfile  README.md  __main__.py  agent.py  config.py  pyproject.toml
labs/agentic/lab_guides/: 0_agent_creation_clean.md  4_adding_external_agents.md  5_automatic_evaluation.md  6_real_time_monitoring.md
labs/agentic/prompt-injection/: README.md
labs/monitoring-and-guardrails/: README.md  automatic-eval.md  drift_monitoring.md  hallucinations.md  prompt_injection.md
labs/monitoring-and-guardrails/assets/: new_project.md
labs/monitoring-and-guardrails/datasets/: ibm_benefits_rag_qa_dataset.csv  ibm_benefits_rag_qa_dataset_unscrambled.csv  synthetic_long_descriptions.csv  synthetic_medium_descriptions.csv  synthetic_short_descriptions.csv
labs/monitoring-and-guardrails/solutions/: demo-video.md
labs/risk-and-compliance/: README.md  guides-directory.md
labs/risk-and-compliance/instructor/: README.md  (+5 more)
(+33 files in other folders)
