[project]
name = "azure-car-agent"
version = "0.1.0"
description = "A2A car review agent with Microsoft Agent Framework and Azure AI Foundry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-a2a>=1.0.0b260604",
    "agent-framework-foundry>=1.8.0",
    "azure-identity>=1.19.0",
    "click>=8.1.8",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
